# Pseudoscanner

./: .gitignore  LICENSE  references.txt
Pseudoscanner_desktop/: CMakeLists.txt  config.cmake
Pseudoscanner_desktop/qml/: Crosshair.qml  DraggablePoint.qml  Main.qml  resources.qrc
Pseudoscanner_desktop/src/: app_logic.cpp  app_logic.h  image_data.cpp  image_data.h  image_provider.cpp  image_provider.h  main.cpp
scanner_img_proc_lib/: CMakeLists.txt
scanner_img_proc_lib/src/: scanner_img_proc.cpp  scanner_img_proc.h  test.cpp  test.h
